# agentic-ai-sandbox

./: .gitignore  01_simple_agent.py  03_create_react_agent.py  04_create_react_agent_w_llm_config.py  05_create_react_agent_w_prompt.py  08_create_react_agent_w_tools.py  README.md  env_utils.py  pyproject.toml  requirements.txt
agentic-rag/: pyproject.toml
agentic-rag/src/agent/: graph.py
custom-search/: main.py
langchain-agentic-ai/: 01_simple_agent.py  02_simple_agent_streaming_output.py  03_prompting_simple.py  04_prompting_fewshot.py  05_prompting_structured_output.py  06_tools.py  07_websearch.py  08_memory.py  09_mcp.py  10_runtime_context.py  11_state.py  12_middleware_summarization.py  13_middleware_trim_del_messages.py  14_hitl.py
langchain-agentic-ai/01-personal-chef/: personal_chef_agent.py
langchain-agentic-ai/02-rag-agent/: rag_agent.py
langchain-agentic-ai/03-sql-agent/: sql_agent.py
langchain-agentic-ai/04-deep-agent/: deep_agent.py
langchain-agentic-ai/mcp-server/: mcp-server.py
langgraph-archive/: 06_create_react_agent_w_memory.py  07_create_react_agent_w_structuredOutput.py  09_create_react_agent_w_prebuilt_tools.py  10_create_react_agent_w_memory.py
